# lazycop

./: .gitignore  Cargo.toml  README.md  starexec.sh  starexec_run_default
.ctags/: conf.ctags
casc/: BOO001-1.txt  SEU140+2.txt
cudann/: Cargo.toml  data.py  example.py  test.py  train.py  weights.py
cudann/src/: lib.rs
data/: combine.py
etc/: clausify  description.html  easy.txt  sat.txt  starexec.sh  starexec_run_default  unsat.txt
heuristic/: Cargo.toml  Makefile  bench.py  build.rs  data.py  model.cu  model.py  train.py  weights.py
heuristic/src/: lib.rs
lazy/: Cargo.toml
lazy/src/: atom.rs  binding.rs  clause.rs  constraint.rs  disequation_solver.rs  equation_solver.rs  goal.rs  lib.rs  literal.rs  occurs.rs  ordering_solver.rs  prelude.rs  problem.rs  record.rs  rule.rs  symbol.rs  tableau.rs
lazycop/: Cargo.toml
lazycop/src/: main.rs  priority.rs  rule_store.rs  search.rs  statistics.rs
lazygen/: Cargo.toml
lazygen/src/: main.rs  rule_store.rs
lazynn/: Cargo.toml  Makefile  data.py  example.py  model.cu  model.py  test.py  train.py
lazynn/src/: lib.rs
nn/: data.py  model.py  model2c.py  run_cuda.py  test.py  train.py
nn/cuda/: Makefile  build.rs  model.cu
src/: atom.rs  binding.rs  clause.rs  clausify.rs  cnf.rs  constraint.rs  disequation_solver.rs  equation_solver.rs  goal.rs  goal_stack.rs  graph.rs  index.rs  infer.rs  literal.rs  main.rs  occurs.rs  options.rs  ordering_solver.rs  output.rs  prelude.rs  priority.rs  problem.rs  problem_builder.rs  record.rs  rule.rs  rule_store.rs  search.rs  smt.rs  solver.rs  statistics.rs  symbol.rs  tableau.rs  term.rs  training.rs  tree.rs  uctree.rs  z3.rs
src/alloc/: block.rs  mod.rs  offset.rs  range.rs  rc.rs
src/core/: atom.rs  clause.rs  (+16 more)
training/: bench.py  data.py  model.cu  model.py  train.py  weights.py
unsolved/: nt2b.p  nt3b.p
(+63 files in other folders)
