[package]
name = "lazycop"
version = "0.2.0"
authors = ["Michael Rawson <michael@rawsons.uk>"]
edition = "2018"
description = "an automatic theorem prover for first-order logic with equality"
readme = "README.md"
homepage = "https://github.com/MichaelRawson/lazycop"
repository = "https://github.com/MichaelRawson/lazycop"
license = "MIT"

[features]
smt = ["z3-sys"]
nn = ["cudann"]

[dependencies]
crossbeam-utils = "0.8"
fnv = "1.0"
memmap = "0.7"
spin = "0.7"
structopt = "0.3"
tptp = "0.28"

[dependencies.cudann]
optional = true
path = "nn/cuda"

[dependencies.z3-sys]
optional = true
version = "0.6"
